--- a/package.json
+++ b/package.json
@@ -5,16 +5,13 @@
   "keywords": [
     "ignore",
     "git",
+    "gitignore",
     "npm",
-    "coffeescript"
+    "npmignore",
+    "coffeescript",
+    "coffeelint"
   ],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/ldez/atom-language-ignore.git"
-  },
-  "bugs": {
-    "url": "https://github.com/ldez/atom-language-ignore/issues"
-  },
+  "repository": "https://github.com/ldez/atom-language-ignore.git",
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
