feat: add support for escape character

--- a/spec/fixtures/.gitignore
+++ b/spec/fixtures/.gitignore
@@ -30,6 +30,9 @@ path/**/file[a-b].txt
 /path/*.txt
 /path/**/*.txt
 /path/**/file[a-b].txt
+\!important!.txt
+file\ with\ space.txt
+\#fileWithHash.txt
 
 # Negated Directories
 !path/
