--- a/spec/fixtures/.gitignore
+++ b/spec/fixtures/.gitignore
@@ -9,6 +9,7 @@ path/[a-z]/path/
 /path/*/
 /path/**/path/
 /path/[a-z]/path/
+path/!path/
 
 # Files
 file
@@ -33,6 +34,7 @@ path/**/file[a-b].txt
 \!important!.txt
 file\ with\ space.txt
 \#fileWithHash.txt
+path/!file
 
 # Negated Directories
 !path/
