--- a/package.json
+++ b/package.json
@@ -3,11 +3,16 @@
   "version": "1.1.0",
   "description": "Syntax highlighting for 'ignore' files : gitignore, npmignore, coffeelintignore, ...",
   "keywords": [
-    "ignore",
     "gitignore",
     "npmignore",
     "coffeelintignore",
-    "slugignore"
+    "slugignore",
+    "ignore",
+    "git",
+    "npm",
+    "coffeelint"
+    "heroku",
+    "slug"
   ],
   "repository": "https://github.com/ldez/atom-language-ignore.git",
   "license": "MIT",
