--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "language-ignore",
-  "version": "1.1.2",
+  "version": "1.2.0",
   "description": "Syntax highlighting for 'ignore' files : gitignore, npmignore, coffeelintignore, ...",
   "keywords": [
     "gitignore",
@@ -19,8 +19,7 @@
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "coffeelint": "^1.15.0"
   }
