--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
   "name": "language-ignore",
   "version": "1.3.0",
-  "description": "Syntax highlighting for 'ignore' files : gitignore, npmignore, coffeelintignore, ...",
+  "description": "Syntax highlighting for 'ignore' files : gitignore, npmignore, dockerignore, coffeelintignore, ...",
   "keywords": [
     "gitignore",
     "npmignore",
     "coffeelintignore",
+    "dockerignore",
     "slugignore",
     "ignore",
     "git",
     "npm",
+    "docker",
     "coffeelint",
     "heroku",
     "slug"
