--- a/spec/fixtures/.gitignore
+++ b/spec/fixtures/.gitignore
@@ -10,6 +10,7 @@ path/[a-z]/path/
 /path/*/
 /path/**/path/
 /path/[a-z]/path/
+/path/[!a-z]/path/
 path/!path/
 
 # Files
@@ -20,6 +21,8 @@ file?.txt
 file*.txt
 file[a-b].txt
 path/file
+path[a-b]/file
+path[!a-b]/file
 path/file.txt
 path/*.txt
 path/**/*.txt
@@ -33,6 +36,7 @@ path/**/file[a-b].txt
 /path/*.txt
 /path/**/*.txt
 /path/**/file[a-b].txt
+/path/**/file[!a-b].txt
 \!important!.txt
 file\ with\ space.txt
 \#fileWithHash.txt
@@ -57,6 +61,7 @@ path/!file
 !*.txt
 !file*.txt
 !file[a-b].txt
+!file[!a-b].txt
 !path/*.txt
 !path/**/*.txt
 !path/**/file[a-b].txt
